src/css/main.css
body {
  margin: 0;
  background: black;
}

/* #scroll-marker {
  width: auto;
  fill: rgb(166, 166, 226);
  opacity: 0;
  height: 25px;
  margin-bottom: 25px;
  transition: opacity 0.4s;
} */

#scroll-indicator {
  height: 0vh;
  width: 50vw;
  opacity: 0;
  box-shadow: 0px 0px 30px 3px rgb(166, 166, 226);
  transition: opacity 0.4s;
}

#bg-cont {
  width: 100vw;
  height: 100vh;
  min-height: 100%;
  margin: 0px 0px 0px 0px;
  position: fixed;
  top: 0;
  z-index: -1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#bg {
  height: 100vh;
  width: 100vw;
  max-width: 600px;
  background-color: black;
  opacity: 0;
  transition: opacity linear 0.5s;
}

@media (min-width: 600px) {
  #bg {
    box-shadow: 0px 0px 100px 120px black;
  }
}

#main-container {
  width: 100vw;
  height: 100vh;
  z-index: 3;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: rgb(166, 166, 226);
  opacity: 0;
  transition: opacity linear 0.5s;
  font-family: "IBM Plex Sans", sans-serif;
  font-size: 18px;
}

#written-content {
  display: grid;
  grid-template-columns: 1fr 1.61803398875fr;
  column-gap: 5px;
  width: 85vw;
  max-width: 500px;
  /* user-select: none; */
}

#buffer-top {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

#three {
  position: fixed;
  min-height: 100%;
  z-index: -2;
  margin: 0px 0px 0px 0px;
}

#blurb {
  grid-column: 1 / 3;
  display: grid;
  grid-template-columns: 1fr 1.61803398875fr;
  column-gap: 5px;
}

#about-me {
  grid-column: 1 / 3;
  margin-top: 0px;
  margin-bottom: 0px;
}

#mswsn-logo {
  width: 100%;
  fill: rgb(166, 166, 226);
}

#work {
  grid-column: 1 / 3;
}

.work-project {
  margin-left: -2%;
  margin-right: -2%;
  margin-bottom: 2%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 10px;
  background-image: none;
  background-blend-mode: screen;
  background-size: cover;
  transition: background-color 0.4s;
}

.work-project:hover {
  background-color: rgba(169, 115, 212, 0.1);
}

video {
  width: 18%;
}

.project-content {
  grid-column: 1 / 3;
  display: grid;
  grid-template-columns: 1fr 1.61803398875fr;
  column-gap: 5px;
  width: 96%;
  height: 100%;
}

.project-left {
  grid-column: 1;
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: flex-start;
  margin-top: 14px;
}

.project-right {
  grid-column: 2 / 3;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

.github-container {
  width: 22px;
  grid-column: 3;
  margin-top: auto;
  margin-bottom: 20px;
}

.frameworks {
  opacity: 0.7;
  transition: opacity 0.4s;
  font-size: 12px;
}

.github-link {
  fill: white;
  width: 90%;
  opacity: 0;
  transition: opacity 0.4s;
  z-index: 4;
}

h1 {
  font-family: "Monda", sans-serif;
  font-size: 12px;
  margin: 0px;
  margin-top: -3px;
  font-weight: 200;
}

#job-title {
  display: inline;
  opacity: 0.8;
}

h2 {
  font-family: "Monda", sans-serif;
  font-size: 16px;
  margin-bottom: 4px;
  font-weight: 200;
}

h3 {
  font-size: 20px;
  margin: 0px 0px 5px 0px;
}

p {
  font-size: 13px;
  line-height: 18px;
  opacity: 0.7;
}

hr {
  grid-column: 1 / 3;
  margin: 5px 0px 6px 0px;
  border: 1px solid rgb(166, 166, 226);
}

#personal-links {
  grid-column: 1;
  font-size: 13px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-bottom: 25px;
}

.project-link {
  display: block;
}

.outbound-link {
  color: rgba(169, 115, 212, 0.9);
  transition: color 0.4s ease-in-out;
}

.outbound-link:hover {
  color: white;
}

